# ClinicaDental-Software

./: .gitignore  Dockerfile  README.md  main.py  manage.py  pyproject.toml  requirements.py  requirements.txt
.devcontainer/: docker-compose.yml  dockerfile
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/base/: models.py
backend/cita/: admin.py  models.py
backend/core/: models.py  views.py
backend/doctor/: admin.py  models.py
backend/factura/: admin.py  models.py
backend/financing/: admin.py  forms.py  models.py  urls.py  views.py
backend/odontogram/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/paciente/: admin.py  models.py
backend/pago/: admin.py  models.py
backend/patients/: forms.py  urls.py  views.py
backend/templates/: base.html  dashboard.html
backend/tratamiento/: admin.py  apps.py  models.py
backend/treatments/: admin.py  forms.py  models.py  urls.py  views.py
base/: models.py
base/templates/: base.html
citas/: admin.py  models.py
citas/migrations/: 0001_initial.py
expendientes/: asgi.py  settings.py  urls.py  wsgi.py
finanzas/: admin.py  models.py  utils.py
finanzas/migrations/: 0001_initial.py  0002_pago_forma_pago_pago_transaccion.py
paciente/: admin.py  forms.py  models.py  urls.py  views.py
paciente/migrations/: 0001_initial.py  0002_historialmedicopaciente.py
paciente/templates/: paciente_wizard_form.html  pacientes.html
pagos/: admin.py  models.py
registros_dentales/: admin.py  apps.py  models.py
tratamientos/: admin.py  models.py
(+45 files in other folders)
