[project]
name = "clinicadental-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.5",
    "django-bootstrap5>=25.2",
    "django-formtools>=2.5.1",
    "groq>=0.31.0",
    "markdown2>=2.5.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
